projects/asw-890-kubernetes/g-hello-ingress/hello-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deploy
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: hello 
  template: 
    metadata:
      name: hello-pod 
      labels: 
        app: hello 
    spec:
      containers:
      - name: hello-container
        image: aswroma3/hello-kube

---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: NodePort 
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
#     nodePort: 32081

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ing
spec:
  rules:
  - host: hello 
    http: 
      paths: 
      - path: /
        backend: 
          serviceName: hello-svc
          servicePort: 8080
